src/test/ui/mir-dataflow/reaching-defs-1.stderr
error: rustc_peek: [16: "x=2"]
  --> $DIR/reaching-defs-1.rs:17:18
   |
LL |         unsafe { rustc_peek(&x); }
   |                  ^^^^^^^^^^^^^^

error: rustc_peek: [16: "x=2", 17: "rustc_peek(&x)", 20: "x=3"]
  --> $DIR/reaching-defs-1.rs:24:14
   |
LL |     unsafe { rustc_peek(&x); }
   |              ^^^^^^^^^^^^^^

error: rustc_peek: [13: "y=1", 21: "y=4"]
  --> $DIR/reaching-defs-1.rs:27:14
   |
LL |     unsafe { rustc_peek(&y); }
   |              ^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 4 previous errors

